--- a/share/ui/log.ui
+++ b/share/ui/log.ui
@@ -1,7 +1,7 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
   <object class="GtkListStore" id="LogWindowList">
     <columns>
       <!-- column-name timestamp -->
@@ -13,79 +13,22 @@
     </columns>
   </object>
   <object class="GtkDialog" id="LogWindow">
+    <property name="can_focus">False</property>
     <property name="border_width">5</property>
     <property name="title" translatable="yes">PyCAM event log</property>
     <property name="role">pycam-log</property>
     <property name="window_position">center</property>
     <property name="type_hint">normal</property>
     <child internal-child="vbox">
-      <object class="GtkVBox" id="dialog-vbox6">
+      <object class="GtkBox" id="dialog-box6">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">2</property>
-        <child>
-          <object class="GtkScrolledWindow" id="scrolledwindow2">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
-            <property name="shadow_type">etched-in</property>
-            <child>
-              <object class="GtkTreeView" id="LogWindowTable">
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="model">LogWindowList</property>
-                <property name="search_column">1</property>
-                <property name="enable_grid_lines">vertical</property>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn0">
-                    <property name="title">Time</property>
-                    <property name="clickable">True</property>
-                    <property name="sort_column_id">0</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnTime"/>
-                      <attributes>
-                        <attribute name="text">0</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn1">
-                    <property name="title">Type</property>
-                    <property name="clickable">True</property>
-                    <property name="sort_column_id">1</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnType"/>
-                      <attributes>
-                        <attribute name="text">1</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkTreeViewColumn" id="LogWindowColumn2">
-                    <property name="title">Message</property>
-                    <property name="clickable">True</property>
-                    <property name="sort_column_id">2</property>
-                    <child>
-                      <object class="GtkCellRendererText" id="LogWindowColumnMessage"/>
-                      <attributes>
-                        <attribute name="text">2</attribute>
-                      </attributes>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="position">1</property>
-          </packing>
-        </child>
         <child internal-child="action_area">
-          <object class="GtkHButtonBox" id="dialog-action_area4">
+          <object class="GtkButtonBox" id="dialog-action_area4">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
               <object class="GtkButton" id="LogWindowCopyToClipboard">
@@ -132,8 +75,72 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">False</property>
             <property name="pack_type">end</property>
             <property name="position">0</property>
+          </packing>
+        </child>
+        <child>
+          <object class="GtkScrolledWindow" id="scrolledwindow2">
+            <property name="visible">True</property>
+            <property name="can_focus">True</property>
+            <property name="shadow_type">etched-in</property>
+            <child>
+              <object class="GtkTreeView" id="LogWindowTable">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="model">LogWindowList</property>
+                <property name="search_column">1</property>
+                <property name="enable_grid_lines">vertical</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="LogWindowColumn0">
+                    <property name="title">Time</property>
+                    <property name="clickable">True</property>
+                    <property name="sort_column_id">0</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="LogWindowColumnTime"/>
+                      <attributes>
+                        <attribute name="text">0</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="LogWindowColumn1">
+                    <property name="title">Type</property>
+                    <property name="clickable">True</property>
+                    <property name="sort_column_id">1</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="LogWindowColumnType"/>
+                      <attributes>
+                        <attribute name="text">1</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+                <child>
+                  <object class="GtkTreeViewColumn" id="LogWindowColumn2">
+                    <property name="title">Message</property>
+                    <property name="clickable">True</property>
+                    <property name="sort_column_id">2</property>
+                    <child>
+                      <object class="GtkCellRendererText" id="LogWindowColumnMessage"/>
+                      <attributes>
+                        <attribute name="text">2</attribute>
+                      </attributes>
+                    </child>
+                  </object>
+                </child>
+              </object>
+            </child>
+          </object>
+          <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
+            <property name="position">1</property>
           </packing>
         </child>
       </object>
@@ -144,36 +151,43 @@
       <action-widget response="0">LogWindowClose</action-widget>
     </action-widgets>
   </object>
-  <object class="GtkToggleAction" id="ToggleLogWindow">
-    <property name="label">_Log Window</property>
-    <property name="short_label">_Log Window</property>
-    <property name="tooltip">Show the event protocol of PyCAM.</property>
-  </object>
   <object class="GtkEventBox" id="StatusBarEventBox">
     <property name="visible">True</property>
+    <property name="can_focus">False</property>
     <property name="tooltip_text" translatable="yes">Click here to show the log window.</property>
     <child>
-      <object class="GtkHBox" id="hbox37">
+      <object class="GtkBox" id="box37">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <child>
           <object class="GtkImage" id="StatusBarWarning">
+            <property name="can_focus">False</property>
             <property name="stock">gtk-dialog-warning</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkStatusbar" id="StatusBar">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="spacing">2</property>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkToggleAction" id="ToggleLogWindow">
+    <property name="label">_Log Window</property>
+    <property name="short_label">_Log Window</property>
+    <property name="tooltip">Show the event protocol of PyCAM.</property>
   </object>
 </interface>
