--- a/share/ui/model_export.ui
+++ b/share/ui/model_export.ui
@@ -1,7 +1,7 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
   <object class="GtkAction" id="SaveAsModel">
     <property name="label">Save Model _as ...</property>
     <property name="short_label">Save Model as ...</property>
