--- a/share/ui/model_extrusion.ui
+++ b/share/ui/model_extrusion.ui
@@ -1,69 +1,122 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkImage" id="ExtrusionChamferIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">extrusion_chamfer.png</property>
+  </object>
+  <object class="GtkAdjustment" id="ExtrusionGridValue">
+    <property name="lower">0.001</property>
+    <property name="upper">1000</property>
+    <property name="step_increment">0.10000000000000001</property>
+  </object>
+  <object class="GtkAdjustment" id="ExtrusionHeightValue">
+    <property name="lower">0.001</property>
+    <property name="upper">1000</property>
+    <property name="step_increment">0.5</property>
+  </object>
+  <object class="GtkImage" id="ExtrusionRadiusDownIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">extrusion_radius_down.png</property>
+  </object>
+  <object class="GtkImage" id="ExtrusionRadiusUpIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">extrusion_radius_up.png</property>
+  </object>
+  <object class="GtkImage" id="ExtrusionSigmoidIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">extrusion_sigmoidal.png</property>
+  </object>
+  <object class="GtkImage" id="ExtrusionSineIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="pixbuf">extrusion_sine.png</property>
+  </object>
+  <object class="GtkListStore" id="ExtrusionTypeModel">
+    <columns>
+      <!-- column-name key -->
+      <column type="gchararray"/>
+      <!-- column-name label -->
+      <column type="gchararray"/>
+      <!-- column-name icon -->
+      <column type="GdkPixbuf"/>
+    </columns>
+  </object>
+  <object class="GtkAdjustment" id="ExtrusionWidthValue">
+    <property name="lower">0.001</property>
+    <property name="upper">1000</property>
+    <property name="step_increment">0.5</property>
+  </object>
   <object class="GtkWindow" id="window1">
+    <property name="can_focus">False</property>
     <child>
       <object class="GtkFrame" id="ModelExtrusionFrame">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="label_xalign">0</property>
         <property name="shadow_type">none</property>
         <child>
           <object class="GtkAlignment" id="alignment2">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="left_padding">12</property>
             <child>
-              <object class="GtkVBox" id="vbox44">
+              <object class="GtkBox" id="box44">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <property name="spacing">3</property>
                 <child>
-                  <object class="GtkTable" id="table18">
+                  <object class="GtkGrid" id="table18">
                     <property name="visible">True</property>
-                    <property name="n_rows">4</property>
-                    <property name="n_columns">2</property>
-                    <property name="column_spacing">3</property>
+                    <property name="can_focus">False</property>
                     <property name="row_spacing">4</property>
+                    <property name="column_spacing">3</property>
                     <child>
                       <object class="GtkLabel" id="ExtrusionTypeLabel">
                         <property name="visible">True</property>
-                        <property name="xalign">0</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Type:</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
+                        <property name="left_attach">0</property>
+                        <property name="top_attach">0</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkLabel" id="ExtrusionHeightLabel">
                         <property name="visible">True</property>
-                        <property name="xalign">0</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Height:</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
+                        <property name="left_attach">1</property>
                         <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkLabel" id="ExtrusionWidthLabel">
                         <property name="visible">True</property>
-                        <property name="xalign">0</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Width:</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
+                        <property name="left_attach">1</property>
                         <property name="top_attach">2</property>
-                        <property name="bottom_attach">3</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkComboBox" id="ExtrusionTypeSelector">
                         <property name="visible">True</property>
+                        <property name="can_focus">False</property>
                         <property name="model">ExtrusionTypeModel</property>
                         <property name="active">0</property>
                         <child>
@@ -81,84 +134,71 @@
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
+                        <property name="top_attach">0</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkSpinButton" id="ExtrusionHeight">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="invisible_char">●</property>
                         <property name="adjustment">ExtrusionHeightValue</property>
                         <property name="digits">3</property>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
+                        <property name="left_attach">0</property>
                         <property name="top_attach">1</property>
-                        <property name="bottom_attach">2</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkSpinButton" id="ExtrusionWidth">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="invisible_char">●</property>
                         <property name="adjustment">ExtrusionWidthValue</property>
                         <property name="digits">3</property>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
+                        <property name="left_attach">0</property>
                         <property name="top_attach">2</property>
-                        <property name="bottom_attach">3</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkLabel" id="ExtrusionGridLabel">
                         <property name="visible">True</property>
-                        <property name="xalign">0</property>
+                        <property name="can_focus">False</property>
                         <property name="label" translatable="yes">Accuracy:</property>
+                        <property name="xalign">0</property>
                       </object>
                       <packing>
+                        <property name="left_attach">1</property>
                         <property name="top_attach">3</property>
-                        <property name="bottom_attach">4</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                     <child>
                       <object class="GtkSpinButton" id="ExtrusionGrid">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
-                        <property name="invisible_char">&#x25CF;</property>
+                        <property name="invisible_char">●</property>
                         <property name="adjustment">ExtrusionGridValue</property>
                         <property name="digits">3</property>
                       </object>
                       <packing>
-                        <property name="left_attach">1</property>
-                        <property name="right_attach">2</property>
+                        <property name="left_attach">0</property>
                         <property name="top_attach">3</property>
-                        <property name="bottom_attach">4</property>
-                        <property name="x_options">GTK_FILL</property>
-                        <property name="y_options">GTK_FILL</property>
                       </packing>
                     </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkHButtonBox" id="hbuttonbox1">
+                  <object class="GtkButtonBox" id="buttonbox1">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="layout_style">start</property>
                     <child>
                       <object class="GtkButton" id="ExtrudeButton">
@@ -177,6 +217,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -187,56 +228,12 @@
         <child type="label">
           <object class="GtkLabel" id="label9">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">&lt;b&gt;Extrusion parameters&lt;/b&gt;</property>
             <property name="use_markup">True</property>
           </object>
         </child>
       </object>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="ExtrusionGridValue">
-    <property name="lower">0.001</property>
-    <property name="upper">1000</property>
-    <property name="step_increment">0.10000000000000001</property>
-  </object>
-  <object class="GtkAdjustment" id="ExtrusionWidthValue">
-    <property name="lower">0.001</property>
-    <property name="upper">1000</property>
-    <property name="step_increment">0.5</property>
-  </object>
-  <object class="GtkAdjustment" id="ExtrusionHeightValue">
-    <property name="lower">0.001</property>
-    <property name="upper">1000</property>
-    <property name="step_increment">0.5</property>
-  </object>
-  <object class="GtkImage" id="ExtrusionSigmoidIcon">
-    <property name="visible">True</property>
-    <property name="pixbuf">extrusion_sigmoidal.png</property>
-  </object>
-  <object class="GtkImage" id="ExtrusionRadiusUpIcon">
-    <property name="visible">True</property>
-    <property name="pixbuf">extrusion_radius_up.png</property>
-  </object>
-  <object class="GtkImage" id="ExtrusionRadiusDownIcon">
-    <property name="visible">True</property>
-    <property name="pixbuf">extrusion_radius_down.png</property>
-  </object>
-  <object class="GtkImage" id="ExtrusionChamferIcon">
-    <property name="visible">True</property>
-    <property name="pixbuf">extrusion_chamfer.png</property>
-  </object>
-  <object class="GtkImage" id="ExtrusionSineIcon">
-    <property name="visible">True</property>
-    <property name="pixbuf">extrusion_sine.png</property>
-  </object>
-  <object class="GtkListStore" id="ExtrusionTypeModel">
-    <columns>
-      <!-- column-name key -->
-      <column type="gchararray"/>
-      <!-- column-name label -->
-      <column type="gchararray"/>
-      <!-- column-name icon -->
-      <column type="GdkPixbuf"/>
-    </columns>
   </object>
 </interface>
