--- a/share/ui/opengl_view_dimension.ui
+++ b/share/ui/opengl_view_dimension.ui
@@ -1,286 +1,314 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkTable" id="DimensionTable">
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkGrid" id="DimensionTable">
     <property name="visible">True</property>
-    <property name="n_rows">2</property>
-    <property name="n_columns">6</property>
+    <property name="can_focus">False</property>
     <property name="column_spacing">3</property>
     <child>
       <object class="GtkLabel" id="label8">
         <property name="visible">True</property>
-        <property name="xalign">0</property>
+        <property name="can_focus">False</property>
         <property name="label" translatable="yes">Model corners:</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
+        <property name="left_attach">0</property>
         <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
-        <property name="y_options">GTK_FILL</property>
       </packing>
     </child>
     <child>
-      <object class="GtkVSeparator" id="vseparator16">
+      <object class="GtkSeparator" id="separator16">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
       </object>
       <packing>
         <property name="left_attach">2</property>
-        <property name="right_attach">3</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkVSeparator" id="vseparator17">
+      <object class="GtkSeparator" id="separator17">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
       </object>
       <packing>
         <property name="left_attach">4</property>
-        <property name="right_attach">5</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox42">
+      <object class="GtkBox" id="box42">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="ModelCornerXMin">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">xmin</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerXSpaces">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">..</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerXMax">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">xmax</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">2</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">1</property>
-        <property name="right_attach">2</property>
         <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox44">
+      <object class="GtkBox" id="box44">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="ModelCornerZMin">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">zmin</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerZSpaces">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">..</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerZMax">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">zmax</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">2</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">5</property>
-        <property name="right_attach">6</property>
         <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
       </packing>
     </child>
     <child>
       <object class="GtkLabel" id="DimensionLabel">
         <property name="visible">True</property>
-        <property name="xalign">0</property>
+        <property name="can_focus">False</property>
         <property name="label" translatable="yes">Bounding Box:</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
-        <property name="x_options">GTK_FILL</property>
+        <property name="left_attach">0</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox40">
+      <object class="GtkBox" id="box40">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="model_dim_x_label">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Δx:</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">&#x394;x:</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="model_dim_x">
             <property name="visible">True</property>
-            <property name="xalign">0</property>
-            <property name="label"></property>
+            <property name="can_focus">False</property>
             <property name="single_line_mode">True</property>
+            <property name="xalign">0</property>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">1</property>
-        <property name="right_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox41">
+      <object class="GtkBox" id="box41">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="model_dim_z_label">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Δz:</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">&#x394;z:</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="model_dim_z">
             <property name="visible">True</property>
-            <property name="xalign">0</property>
-            <property name="label"></property>
+            <property name="can_focus">False</property>
             <property name="single_line_mode">True</property>
+            <property name="xalign">0</property>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">5</property>
-        <property name="right_attach">6</property>
-        <property name="x_options">GTK_FILL</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox43">
+      <object class="GtkBox" id="box43">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="model_dim_y_label">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
+            <property name="label" translatable="yes">Δy:</property>
             <property name="xalign">0</property>
-            <property name="label" translatable="yes">&#x394;y:</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="model_dim_y">
             <property name="visible">True</property>
-            <property name="xalign">0</property>
-            <property name="label"></property>
+            <property name="can_focus">False</property>
             <property name="single_line_mode">True</property>
+            <property name="xalign">0</property>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">3</property>
-        <property name="right_attach">4</property>
-        <property name="x_options">GTK_FILL</property>
+        <property name="top_attach">0</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="hbox45">
+      <object class="GtkBox" id="box45">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkLabel" id="ModelCornerYMin">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">ymin</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerYSpaces">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">..</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
         <child>
           <object class="GtkLabel" id="ModelCornerYMax">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="label" translatable="yes">ymax</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">2</property>
           </packing>
         </child>
       </object>
       <packing>
         <property name="left_attach">3</property>
-        <property name="right_attach">4</property>
         <property name="top_attach">1</property>
-        <property name="bottom_attach">2</property>
-        <property name="x_options">GTK_FILL</property>
       </packing>
+    </child>
+    <child>
+      <placeholder/>
+    </child>
+    <child>
+      <placeholder/>
     </child>
   </object>
 </interface>
