--- a/share/ui/processes.ui
+++ b/share/ui/processes.ui
@@ -1,7 +1,13 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkListStore" id="ProcessList">
+    <columns>
+      <!-- column-name uuid -->
+      <column type="gchararray"/>
+    </columns>
+  </object>
   <object class="GtkListStore" id="StrategyModel">
     <columns>
       <!-- column-name label -->
@@ -16,26 +22,19 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="ProcessList">
-    <columns>
-      <!-- column-name uuid -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
-  <object class="GtkVPaned" id="ProcessBox">
+  <object class="GtkPaned" id="ProcessBox">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="hbox11">
+      <object class="GtkBox" id="box11">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">3</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow5">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
               <object class="GtkTreeView" id="ProcessEditorTable">
@@ -45,6 +44,9 @@
                 <property name="headers_clickable">False</property>
                 <property name="enable_search">False</property>
                 <property name="search_column">0</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="NameColumn">
                     <property name="title">Name</property>
@@ -69,16 +71,20 @@
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox20">
+          <object class="GtkBox" id="box20">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkVButtonBox" id="vbuttonbox2">
+              <object class="GtkButtonBox" id="buttonbox2">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <property name="layout_style">center</property>
                 <child>
@@ -139,6 +145,8 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -161,6 +169,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -171,33 +180,39 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="ProcessSettingsControlsBox">
+      <object class="GtkBox" id="ProcessSettingsControlsBox">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">4</property>
         <child>
           <object class="GtkAlignment" id="ProcessSelectorBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="xscale">0</property>
             <property name="yscale">0</property>
             <child>
-              <object class="GtkHBox" id="hbox1">
+              <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="spacing">3</property>
                 <child>
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
-                    <property name="xalign">0</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Strategy:</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkComboBox" id="StrategySelector">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="model">StrategyModel</property>
                     <child>
                       <object class="GtkCellRendererText" id="StrategyLabelCell"/>
@@ -217,18 +232,22 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="ProcessParametersBox">
+          <object class="GtkBox" id="ProcessParametersBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
               <placeholder/>
             </child>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
