--- a/share/ui/progress_bar.ui
+++ b/share/ui/progress_bar.ui
@@ -1,36 +1,45 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
   <object class="GtkWindow" id="DummyWindow">
+    <property name="can_focus">False</property>
     <child>
-      <object class="GtkVBox" id="ProgressBox">
+      <object class="GtkBox" id="ProgressBox">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <child>
           <object class="GtkProgressBar" id="MultipleProgressBar">
+            <property name="can_focus">False</property>
             <property name="ellipsize">end</property>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="ProgressWidget">
+          <object class="GtkBox" id="ProgressWidget">
+            <property name="can_focus">False</property>
             <property name="spacing">3</property>
             <child>
               <object class="GtkProgressBar" id="ProgressBar">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="ellipsize">end</property>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
             <child>
-              <object class="GtkVBox" id="vbox13">
+              <object class="GtkBox" id="vbox13">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <child>
                   <object class="GtkToggleButton" id="ShowToolpathProgressButton">
@@ -41,6 +50,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -53,18 +63,21 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
