--- a/share/ui/tasks.ui
+++ b/share/ui/tasks.ui
@@ -1,16 +1,17 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkAdjustment" id="speed">
-    <property name="lower">1</property>
-    <property name="upper">10000</property>
-    <property name="step_increment">1</property>
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkImage" id="GenerateOneToolPathIcon">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-execute</property>
   </object>
-  <object class="GtkAdjustment" id="feedrate">
-    <property name="lower">1</property>
-    <property name="upper">10000</property>
-    <property name="step_increment">1</property>
+  <object class="GtkListStore" id="TaskList">
+    <columns>
+      <!-- column-name uuid -->
+      <column type="gchararray"/>
+    </columns>
   </object>
   <object class="GtkListStore" id="TaskTypeList">
     <columns>
@@ -26,26 +27,19 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="TaskList">
-    <columns>
-      <!-- column-name uuid -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
-  <object class="GtkVPaned" id="TaskBox">
+  <object class="GtkPaned" id="TaskBox">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="hbox19">
+      <object class="GtkBox" id="hbox19">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">2</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow3">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
               <object class="GtkTreeView" id="TaskView">
@@ -56,13 +50,16 @@
                 <property name="headers_clickable">False</property>
                 <property name="enable_search">False</property>
                 <property name="search_column">0</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="NameColumn">
                     <property name="title">Name</property>
                     <child>
                       <object class="GtkCellRendererText" id="NameCell">
                         <property name="editable">True</property>
-		      </object>
+                      </object>
                     </child>
                   </object>
                 </child>
@@ -70,16 +67,20 @@
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox35">
+          <object class="GtkBox" id="vbox35">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkVButtonBox" id="vbuttonbox4">
+              <object class="GtkButtonBox" id="buttonbox4">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <property name="layout_style">center</property>
                 <child>
@@ -169,6 +170,8 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -184,12 +187,14 @@
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -200,32 +205,38 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="TaskDetails">
+      <object class="GtkBox" id="TaskDetails">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">5</property>
         <child>
           <object class="GtkAlignment" id="TaskChooserBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="xscale">0</property>
             <property name="yscale">0</property>
             <child>
-              <object class="GtkHBox" id="hbox1">
+              <object class="GtkBox" id="hbox1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="spacing">3</property>
                 <child>
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Task type:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkComboBox" id="TaskTypeSelector">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="model">TaskTypeList</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -236,6 +247,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -243,12 +255,15 @@
             </child>
           </object>
           <packing>
+            <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="TaskParameterBox">
+          <object class="GtkBox" id="TaskParameterBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="spacing">5</property>
             <child>
               <placeholder/>
@@ -256,6 +271,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -266,8 +282,14 @@
       </packing>
     </child>
   </object>
-  <object class="GtkImage" id="GenerateOneToolPathIcon">
-    <property name="visible">True</property>
-    <property name="stock">gtk-execute</property>
+  <object class="GtkAdjustment" id="feedrate">
+    <property name="lower">1</property>
+    <property name="upper">10000</property>
+    <property name="step_increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="speed">
+    <property name="lower">1</property>
+    <property name="upper">10000</property>
+    <property name="step_increment">1</property>
   </object>
 </interface>
