--- a/share/ui/toolpath_export.ui
+++ b/share/ui/toolpath_export.ui
@@ -1,18 +1,35 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkListStore" id="PostprocessorList">
+    <columns>
+      <!-- column-name label -->
+      <column type="gchararray"/>
+      <!-- column-name name -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">LinuxCNC</col>
+        <col id="1" translatable="yes">linuxcnc</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkFrame" id="ToolpathExportFrame">
     <property name="visible">True</property>
+    <property name="can_focus">False</property>
     <property name="label_xalign">0</property>
     <property name="shadow_type">none</property>
     <child>
       <object class="GtkAlignment" id="alignment1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="left_padding">12</property>
         <child>
-          <object class="GtkVButtonBox" id="hbuttonbox1">
+          <object class="GtkButtonBox" id="buttonbox1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="layout_style">center</property>
             <child>
               <object class="GtkButton" id="ExportGCodeAll">
@@ -61,23 +78,10 @@
     <child type="label">
       <object class="GtkLabel" id="label1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="label" translatable="yes">&lt;b&gt;Save toolpath as GCode&lt;/b&gt;</property>
         <property name="use_markup">True</property>
       </object>
     </child>
-  </object>
-  <object class="GtkListStore" id="PostprocessorList">
-    <columns>
-      <!-- column-name label -->
-      <column type="gchararray"/>
-      <!-- column-name name -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">LinuxCNC</col>
-        <col id="1" translatable="yes">linuxcnc</col>
-      </row>
-    </data>
   </object>
 </interface>
