--- a/share/ui/toolpath_simulation.ui
+++ b/share/ui/toolpath_simulation.ui
@@ -1,7 +1,12 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkAdjustment" id="SimulationDetailsValue">
+    <property name="lower">1</property>
+    <property name="upper">10</property>
+    <property name="step_increment">1</property>
+  </object>
   <object class="GtkAdjustment" id="SimulationProgressTimelineValue">
     <property name="upper">1</property>
     <property name="step_increment">1</property>
@@ -11,71 +16,77 @@
     <property name="upper">100000</property>
     <property name="step_increment">0.25</property>
   </object>
-  <object class="GtkAdjustment" id="SimulationDetailsValue">
-    <property name="lower">1</property>
-    <property name="upper">10</property>
-    <property name="step_increment">1</property>
-  </object>
   <object class="GtkFrame" id="SimulationBox">
     <property name="visible">True</property>
+    <property name="can_focus">False</property>
     <property name="label_xalign">0</property>
     <property name="shadow_type">none</property>
     <child>
       <object class="GtkAlignment" id="alignment1">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="top_padding">3</property>
         <property name="left_padding">12</property>
         <child>
-          <object class="GtkVBox" id="vbox1">
+          <object class="GtkBox" id="box1">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <property name="spacing">3</property>
             <child>
-              <object class="GtkHBox" id="hbox1">
+              <object class="GtkBox" id="box2">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <child>
                   <object class="GtkLabel" id="SimulationProgressTimelineLabel">
                     <property name="visible">True</property>
-                    <property name="xalign">0</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Progress:</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkLabel" id="SimulationProgressTimeDisplay">
                     <property name="visible">True</property>
-                    <property name="xalign">1</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">0:20 / 4:45</property>
+                    <property name="xalign">1</property>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
             <child>
-              <object class="GtkHScale" id="SimulationProgressTimeline">
+              <object class="GtkScale" id="SimulationProgressTimeline">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="update_policy">delayed</property>
                 <property name="adjustment">SimulationProgressTimelineValue</property>
                 <property name="draw_value">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">1</property>
               </packing>
             </child>
             <child>
-              <object class="GtkHButtonBox" id="hbuttonbox1">
+              <object class="GtkButtonBox" id="buttonbox1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="spacing">3</property>
                 <child>
                   <object class="GtkButton" id="SimulationStartButton">
@@ -127,25 +138,31 @@
               </packing>
             </child>
             <child>
-              <object class="GtkHSeparator" id="hseparator1">
+              <object class="GtkSeparator" id="separator1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">3</property>
               </packing>
             </child>
             <child>
-              <object class="GtkHBox" id="hbox36">
+              <object class="GtkBox" id="box36">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="spacing">4</property>
                 <child>
                   <object class="GtkLabel" id="SimulationSpeedFactorLabel">
                     <property name="visible">True</property>
-                    <property name="xalign">0</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Simulation speed:</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
@@ -153,7 +170,7 @@
                   <object class="GtkSpinButton" id="SimulationSpeedFactorControl">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <property name="invisible_char">&#x25CF;</property>
+                    <property name="invisible_char">●</property>
                     <property name="adjustment">SimulationSpeedFactorValue</property>
                     <property name="digits">2</property>
                   </object>
@@ -177,6 +194,7 @@
     <child type="label">
       <object class="GtkLabel" id="SimulationFrameLabel">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="label" translatable="yes">&lt;b&gt;Simulation&lt;/b&gt;</property>
         <property name="use_markup">True</property>
       </object>
