--- a/share/ui/toolpaths.ui
+++ b/share/ui/toolpaths.ui
@@ -1,27 +1,26 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
+  <requires lib="gtk+" version="3.12"/>
   <object class="GtkListStore" id="ToolpathListModel">
     <columns>
       <!-- column-name ref -->
       <column type="gchararray"/>
     </columns>
   </object>
-  <object class="GtkVPaned" id="ToolpathsBox">
+  <object class="GtkPaned" id="ToolpathsBox">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="ToolpathsList">
+      <object class="GtkBox" id="ToolpathsList">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">5</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow1">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
               <object class="GtkTreeView" id="ToolpathTable">
@@ -30,6 +29,9 @@
                 <property name="model">ToolpathListModel</property>
                 <property name="headers_clickable">False</property>
                 <property name="search_column">0</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="ToolpathVisibleColumn">
                     <property name="title">Visible</property>
@@ -62,12 +64,15 @@
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVButtonBox" id="vbuttonbox5">
+          <object class="GtkButtonBox" id="buttonbox5">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <property name="layout_style">center</property>
             <child>
@@ -129,6 +134,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
