--- a/share/ui/tools.ui
+++ b/share/ui/tools.ui
@@ -1,16 +1,12 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Generated with glade 3.18.3 -->
 <interface>
-  <!-- interface-requires gtk+ 2.12 -->
-  <!-- interface-naming-policy project-wide -->
-  <object class="GtkAdjustment" id="torusdiameter">
-    <property name="lower">0.0001</property>
-    <property name="upper">500</property>
-    <property name="step_increment">0.050000000000000003</property>
-  </object>
-  <object class="GtkAdjustment" id="tooldiameter">
-    <property name="lower">0.0001</property>
-    <property name="upper">500</property>
-    <property name="step_increment">0.10000000000000001</property>
+  <requires lib="gtk+" version="3.12"/>
+  <object class="GtkListStore" id="ToolList">
+    <columns>
+      <!-- column-name uuid -->
+      <column type="gchararray"/>
+    </columns>
   </object>
   <object class="GtkListStore" id="ToolShapeList">
     <columns>
@@ -26,26 +22,19 @@
       </row>
     </data>
   </object>
-  <object class="GtkListStore" id="ToolList">
-    <columns>
-      <!-- column-name uuid -->
-      <column type="gchararray"/>
-    </columns>
-  </object>
-  <object class="GtkVPaned" id="ToolBox">
+  <object class="GtkPaned" id="ToolBox">
     <property name="visible">True</property>
     <property name="can_focus">True</property>
     <property name="orientation">vertical</property>
     <child>
-      <object class="GtkHBox" id="hbox9">
+      <object class="GtkBox" id="hbox9">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="spacing">4</property>
         <child>
           <object class="GtkScrolledWindow" id="scrolledwindow6">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="hscrollbar_policy">automatic</property>
-            <property name="vscrollbar_policy">automatic</property>
             <property name="shadow_type">etched-in</property>
             <child>
               <object class="GtkTreeView" id="ToolTable">
@@ -54,6 +43,9 @@
                 <property name="model">ToolList</property>
                 <property name="headers_clickable">False</property>
                 <property name="search_column">0</property>
+                <child internal-child="selection">
+                  <object class="GtkTreeSelection" id="treeview-selection1"/>
+                </child>
                 <child>
                   <object class="GtkTreeViewColumn" id="IDColumn">
                     <property name="title">Tool ID</property>
@@ -89,16 +81,20 @@
             </child>
           </object>
           <packing>
+            <property name="expand">True</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkVBox" id="vbox16">
+          <object class="GtkBox" id="box16">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="orientation">vertical</property>
             <child>
-              <object class="GtkVButtonBox" id="vbuttonbox1">
+              <object class="GtkButtonBox" id="buttonbox1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="orientation">vertical</property>
                 <property name="layout_style">center</property>
                 <child>
@@ -159,6 +155,8 @@
                 </child>
               </object>
               <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
                 <property name="position">0</property>
               </packing>
             </child>
@@ -181,6 +179,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -191,32 +190,38 @@
       </packing>
     </child>
     <child>
-      <object class="GtkVBox" id="ToolSettingsControlsBox">
+      <object class="GtkBox" id="ToolSettingsControlsBox">
         <property name="visible">True</property>
+        <property name="can_focus">False</property>
         <property name="orientation">vertical</property>
         <property name="spacing">4</property>
         <child>
           <object class="GtkAlignment" id="ToolSelectorBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="xscale">0</property>
             <property name="yscale">0</property>
             <child>
-              <object class="GtkHBox" id="hbox1">
+              <object class="GtkBox" id="box1">
                 <property name="visible">True</property>
+                <property name="can_focus">False</property>
                 <property name="spacing">3</property>
                 <child>
                   <object class="GtkLabel" id="label1">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="label" translatable="yes">Tool shape:</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkComboBox" id="ToolShapeSelector">
                     <property name="visible">True</property>
+                    <property name="can_focus">False</property>
                     <property name="model">ToolShapeList</property>
                     <child>
                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
@@ -227,6 +232,7 @@
                   </object>
                   <packing>
                     <property name="expand">False</property>
+                    <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
                 </child>
@@ -235,12 +241,14 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">0</property>
           </packing>
         </child>
         <child>
-          <object class="GtkHBox" id="ToolParameterBox">
+          <object class="GtkBox" id="ToolParameterBox">
             <property name="visible">True</property>
+            <property name="can_focus">False</property>
             <property name="spacing">5</property>
             <child>
               <placeholder/>
@@ -248,6 +256,7 @@
           </object>
           <packing>
             <property name="expand">False</property>
+            <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
         </child>
@@ -257,5 +266,15 @@
         <property name="shrink">False</property>
       </packing>
     </child>
+  </object>
+  <object class="GtkAdjustment" id="tooldiameter">
+    <property name="lower">0.0001</property>
+    <property name="upper">500</property>
+    <property name="step_increment">0.10000000000000001</property>
+  </object>
+  <object class="GtkAdjustment" id="torusdiameter">
+    <property name="lower">0.0001</property>
+    <property name="upper">500</property>
+    <property name="step_increment">0.050000000000000003</property>
   </object>
 </interface>
